Closed Bug 615382 Opened 15 years ago Closed 15 years ago

ByteArray::Uncompress swaps len/cap on the error path

Categories

(Tamarin Graveyard :: Virtual Machine, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stejohns, Unassigned)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
See patch, when we have an error we "restore" the fields incorrectly.
Attachment #493819 - Flags: review?(rreitmai)
Comment on attachment 493819 [details] [diff] [review] Patch Another option would have been to swap the order to match the original locals; i.e. data, cap, len, pos, but either way is fine. Also we're sure m_array won't be gc'd during this process, correct?
Attachment #493819 - Flags: review?(rreitmai) → review+
TR 5590:fc1b618ce3b2
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: