Bug 615382 - ByteArray::Uncompress swaps len/cap on the error path (r=rreitmai)